--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,29 @@
 .App {
   text-align: center;
+  padding: 0;
+  margin: 0;
+}
+
+div.navbar {
+  float: left;
+  width: 100vw;
+  height: 10vh;
+  background: #644154;
+  color: white;
+  border-bottom: 3px solid white;
+}
+
+.sidebar {
+  float: left;
+  width: 30vw;
+  height: 90vh;
+  background: #ccadc7 ;
+}
+
+.main-content {
+  float: left;
+  width: 70vw;
+  height: 90vh;
+  background: lightyellow;
+  color: black;
 }
