articles on homepage

--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,31 @@ a:link {
   text-decoration: none;
   font-weight: bold;
 }
+
+
+/*.sourcesCard {
+  margin: 1em auto;
+  -webkit-perspective: 1200px;
+  -moz-perspective: 1200px;
+  -ms-perspective: 1200px;
+  perspective: 1200px;
+  -webkit-animation-name: spinner;
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-duration: 6s;
+
+  animation-name: spinner;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-duration: 6s;
+
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+
+.sourcesCard:hover {
+  -webkit-animation-play-state: paused;
+  animation-play-state: paused;
+}*/
