--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,11 @@ body {
 
 div.navbar {
   width: 100%;
-  height: 17vh;
+  height: 25vh;
   background: #f6b68c;
   color: white;
   font: sans-serif;
+  text-align: center;
 }
 
 a.active {
@@ -30,3 +31,7 @@ a:link {
   text-decoration: none;
   font-weight: bold;
 }
+
+/*div.ui.pointing.menu {
+  color: red;
+}*/
