--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,20 @@
 .App {
-  text-align: center;
   padding: 0;
   margin: 0;
+}
+
+h1 {
+  text-align: center;
+}
+
+body {
+  font-family: sans-serif;
+  background-color: white;
+}
+
+
+button.ui.teal.button {
+  margin: 5px;
+  padding-left: 1em;
+  padding-right: 1em; 
 }
