--- a/src/App.css
+++ b/src/App.css
@@ -25,5 +25,12 @@ button.ui.teal.button {
 }
 
 .results-list {
-  padding-top: 2em; 
+  padding-top: 2em;
+}
+
+.image {
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+  margin: 0 auto;
 }
