--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,11 @@ body {
 }
 
 
-button.ui.teal.button {
+/*button.ui.teal.button {
   margin: 5px;
   padding-left: 1em;
   padding-right: 1em;
-}
+}*/
 
 .search-box {
   width: 100%;
